--- a/OurSpec.html
+++ b/OurSpec.html
@@ -3,21 +3,23 @@
 <head>
   <meta charset="utf-8">
   <title>Our Spec</title>
-
-  <!-- include source files here... -->
-  <script src="src/note-model.js"></script>
-  <script src="src/note-list-model.js"></script>
-  <script src="src/note-list-view.js"></script>
-  <script src="src/note-controller.js"></script>
-
-  <!-- include spec files here... -->
-  <script src="spec/note-model-spec.js"></script>
-  <script src="spec/note-list-model-spec.js"></script>
-  <script src="spec/note-list-view-spec.js"></script>
-  <script src="spec/note-controller-spec.js"></script>
-
 </head>
 
 <body>
+
+  <div id='app'></div>
+
+    <!-- include source files here... -->
+    <script src="src/note-model.js"></script>
+    <script src="src/note-list-model.js"></script>
+    <script src="src/note-list-view.js"></script>
+    <script src="src/note-controller.js"></script>
+
+    <!-- include spec files here... -->
+    <script src="spec/note-model-spec.js"></script>
+    <script src="spec/note-list-model-spec.js"></script>
+    <script src="spec/note-list-view-spec.js"></script>
+    <script src="spec/note-controller-spec.js"></script>
+
 </body>
 </html>
