--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <title>title</title>
     </head>
   <body>
-    <div id='app'>
-      hello
-    </div>
+    <div id='app'>hello</div>
+    <div id="note"></div>
+
     <script src="src/note-model.js"></script>
     <script src="src/note-list-model.js"></script>
     <script src="src/note-list-view.js"></script>
     <script src='src/note-controller.js' ></script>
-    <script src='src/index.js' ></script>
+    <script src="src/single-note-view.js"></script>
+    <script src='src/index.js'></script>
   </body>
 </html>
