--- a/singlePagePill.html
+++ b/singlePagePill.html
@@ -6,25 +6,28 @@
   </head>
 
   <body>
-    <a href="" id="tiger-link">Tiger</a>
+    <a href="#tiger">Tiger</a>
     <div id="animal"></div>
 
     <script>
-      makeTigerLinkClickSayTiger();
+      makeUrlChangeShowAnimalForCurrentPage();
 
-      function makeTigerLinkClickSayTiger() {
-        document
-          .getElementById("tiger-link")
-          .addEventListener("click", function(clickEvent) {
-            clickEvent.preventDefault();
-            sayTiger();
-          });
+      function makeUrlChangeShowAnimalForCurrentPage() {
+        window.addEventListener("hashchange", showAnimalForCurrentPage);
       };
 
-      function sayTiger() {
+      function showAnimalForCurrentPage() {
+        showAnimal(getAnimalFromUrl(window.location));
+      };
+
+      function getAnimalFromUrl(location) {
+        return location.hash.split("#")[1];
+      };
+
+      function showAnimal(animal) {
         document
           .getElementById("animal")
-          .innerHTML = "Rooooar";
+          .innerHTML = animal;
       };
     </script>
   </body>
